<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/btn_white_normal"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_pay_text"
            android:textSize="20sp"
            android:background="@color/green"
            android:gravity="center"
            android:textColor="@color/title_color"
            />
        <hbie.vip.parking.button.WaveView
            android:id="@+id/pay_activity_back"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_fanhui_left"
                />
        </hbie.vip.parking.button.WaveView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:background="@color/title_color"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_current_pay_money_text"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:text="@string/tv_pay_money_text"
            android:textSize="30sp"
            android:gravity="center|bottom"
            android:textColor="@color/red"
            />
        <LinearLayout
           android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:background="@color/title_color"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_money_total"
                android:textColor="@color/btn_gray_pressed_status"
                android:textSize="14sp"
                />

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_gray_normal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:background="@color/title_color"
        android:orientation="vertical"
        >
        <include layout="@layout/pay_main_current_car"/>
        <include layout="@layout/pay_mian_current_parking"/>
        <include layout="@layout/pay_main_current_time"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_gray_normal"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_gray_normal"
        android:layout_marginTop="10dip"
        />
   <RelativeLayout
       android:id="@+id/all_pay_means"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       >
    <RelativeLayout
        android:id="@+id/ril_weixin"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/title_color"
        >
        <ImageView
            android:id="@+id/image_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_weixin"
            android:layout_marginLeft="20dip"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_toRightOf="@id/image_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_weixin_text"
            android:layout_marginLeft="20dip"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ril_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ril_weixin"
        android:background="@color/btn_gray_normal"
        />
    <RelativeLayout
        android:id="@+id/ril_zhifubao"
        android:layout_below="@id/ril_line"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/title_color"
        >
        <ImageView
            android:id="@+id/image_zhifubao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_zhifubao"
            android:layout_marginLeft="20dip"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_toRightOf="@id/image_zhifubao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_zhifubao_text"
            android:layout_marginLeft="20dip"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            />

    </RelativeLayout>
    <RelativeLayout
           android:id="@+id/ril_line_yinhangka"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:visibility="gone"
           android:layout_below="@id/ril_zhifubao"
           android:background="@color/btn_gray_normal"
           />
       <RelativeLayout
           android:layout_below="@id/ril_line_yinhangka"
           android:layout_width="match_parent"
           android:layout_height="50dip"
           android:visibility="gone"
           android:background="@color/title_color"
           android:id="@+id/ril_yinhangka"
           >
           <ImageView
               android:id="@+id/image_yinhangka"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/ic_yinhangka"
               android:layout_marginLeft="20dip"
               android:layout_centerVertical="true"
               />
           <TextView
               android:layout_toRightOf="@id/image_yinhangka"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tv_yinhangka_text"
               android:layout_marginLeft="20dip"
               android:layout_centerVertical="true"
               android:textSize="18sp"
               />

       </RelativeLayout>

       <RadioGroup
           android:layout_alignParentRight="true"
           android:layout_width="50dip"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center"
           >
           <!--<RelativeLayout-->
               <!--android:layout_width="match_parent"-->
               <!--android:layout_height="50dip"-->
               <!-->-->
           <RadioButton
               android:id="@+id/rb_choose_weixin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:button="@drawable/radio"
               android:checked="false"
               android:layout_marginTop="5dip"
               />
           <!--</RelativeLayout>-->
           <!--<RelativeLayout -->
               <!--android:layout_width="match_parent"-->
               <!--android:layout_height="50dip"-->
               <!-->-->
               <RadioButton
                   android:id="@+id/rb_choose_zhifubao"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:button="@drawable/radio"
                   android:checked="true"
                   android:layout_marginTop="30dip"
                   />
           <RadioButton
               android:id="@+id/rb_choose_yinhangka"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:button="@drawable/radio"
               android:visibility="gone"
               android:layout_marginTop="30dip"
               />
           <!--</RelativeLayout>-->
       </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_gray_normal"
        />
    <hbie.vip.parking.button.RevealButton
        android:id="@+id/btn_sure_pay"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/btn_green"
        android:layout_marginTop="30dip"
        android:text="@string/btn_sure_pay_text"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        />
</LinearLayout>
