<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/btn_white_normal"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        >
        <TextView
            android:id="@+id/bankcart_title_data_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:text="@string/bankcart_title_text"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/title_color"
            />
        <Button
            android:id="@+id/add_data_bankcart"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/btn_add_bank_cart"
            android:textSize="18sp"
            android:textColor="@color/title_color"
            android:layout_alignParentRight="true"
            />
        <hbie.vip.parking.button.WaveView
            android:id="@+id/ll_bankcart_back"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            android:gravity="center"
            >
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/ic_fanhui_left"

               />
        </hbie.vip.parking.button.WaveView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_bankcard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/title_color"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        >
        <ImageView
            android:id="@+id/image_card"
            android:layout_width="28dp"
            android:layout_height="28dip"
            android:background="@drawable/ic_yinhangka"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            />
        <LinearLayout
            android:layout_toRightOf="@id/image_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:layout_marginLeft="10dip"
            >
            <TextView
                android:id="@+id/tv_bankcardname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="11"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_sunbranchname"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="11"
                android:textSize="10dip"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22222"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dip"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView
        android:id="@+id/tv_visible_please_add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/te_visible_add_card"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
</LinearLayout>
